assets/css/style.css
/* Importing Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700;800&family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&family=Playfair+Display:wght@600&display=swap');

/* Wildcard selector to override default browser styling */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Setting default styling */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    font-family: 'Assistant', sans-serif;
}

/* Default header fonts */
h1,
h2,
h3 {
    font-family: 'Playfair Display', serif;
}

header {
    background-color: #FFFFFF;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

main {
    /* Make main content take up extra space - push footer down */
    flex: 1 0 auto;
    /* Make content visible by pushing it below the header */
    margin-top: 58.5px;
    display: flex;
    flex-direction: column;
}

footer {
    height: 90px;
    background-color: rgba(71, 108, 70, 1);
    color: antiquewhite;
    padding-top: 20px;
    padding-left: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-right: 10px;
}

.fa-brands {
    text-align: center;
    text-decoration: none;
    color: antiquewhite;
    text-decoration: none;
    padding: 5px;
    font-size: 25px;
}

.flexcontent {
    display: flex;
    flex-direction: column;
    font-size: larger;
    text-align: center;
}

.form {
    display: flex;
    flex-direction: column;
    width: 70vw;
    text-align: center;
}

.formlabel {
    padding-top: 5px;
    font-size: 20px
}

.contactformimage {
    background: url(../images/compressed-max-tutak-unsplash.webp) no-repeat center/cover;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 120vh;
    width: auto;
    position: sticky;
}

.contactformbox {
    background-color: rgba(71, 108, 70, 0.8);
    color: antiquewhite;
    margin: 20px;
    height: 50vh;
    width: 85vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-self: center;
    border-radius: 3%;
    padding-top: 30px;
    padding-bottom: 30px;
}

.contactinfobox {
    background-color: rgba(71, 108, 70, 0.8);
    color: antiquewhite;
    margin: 20px;
    height: 75vh;
    width: 85vw;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    align-self: center;
    border-radius: 3%;
    padding-top: 30px;
    padding-bottom: 30px;
}

.contactinfobox p {
    font-size: 20px;
}

.contactinfobox2 {
    display: flex;
    flex-direction: row;
}

.submitbutton {
    color: antiquewhite;
    background-color: rgba(71, 108, 70, 0.8);
    margin-top: 10px;
    padding: 5px;
    width: 25vw;
    font-weight: bolder;
}

.blog {
    display: flex;
    column-count: 2;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-top: 10px;
}

.blogpost {
    height: 175px;
    width: 175px;
    background-color: rgba(71, 108, 70, 0.8);
    border-radius: 20px;
    display: flex;
    margin-bottom: 10px;
    justify-content: center;
}

.signupimage {
    background: url(../images/compressed-pexels-jep-gambardella.webp) no-repeat center/cover;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: auto;
}

.signupbox {
    background-color: rgba(71, 108, 70, 0.8);
    color: antiquewhite;
    margin: 20px;
    height: 55vh;
    width: 85vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-self: center;
    border-radius: 3%;
    padding-top: 30px;
}

.newsprefs {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.signupprefs {
    display: flex;
    flex-direction: row;
}

#copyright {
    text-align: center;
}

#social-links {
    list-style-type: none;
    display: flex;
    flex-direction: row;
    padding-right: 2px;
    justify-content: space-evenly;
}

/* Used to hide elements i.e. unwanted headings*/
.hidden {
    display: none;
}

/* Removing default hyperlink styling to navigation links */
.internal-link {
    text-decoration: none;
    color: black;
    margin: 10px;
    list-style-type: none;
}

#navigation {
    font-size: 110%;
    letter-spacing: 1px;
    list-style-type: none;
    text-decoration: none;
}

#navigation li {
    font-size: 110%;
    padding-top: 10px;
}

#logo {
    text-decoration: none;
    color: black;
    padding-left: 10px;
    font-size: 110%;
}

#page-header {
    display: flex;
    flex-direction: row;
    left: 0;
    right: 0;
    padding-bottom: 10px;
    padding-top: 5px;
}

/* Nav toggle, adapted from Code Institute's "Love Running" project */

nav {
    position: absolute;
    background-color: #FFFFFF;
    width: 100%;
    left: 0;
    right: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
    padding-bottom: 10px;
}

#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

#heroimage {
    height: 400px;
    width: 100%;
    background: url('../images/compressed-johny-goerend-unsplash.webp') no-repeat center/cover;
    position: relative;
    margin: 0;
    margin-bottom: 10px;
}

#herotext {
    color: antiquewhite;
    background-color: rgba(71, 108, 70, 0.8);
    bottom: 10px;
    position: absolute;
    height: 275px;
    font-size: xx-large;
    width: 90%;
    padding-left: 10px;
    padding: 5px;
}

#herotext h2 {
    font-weight: 600;
    padding-bottom: 5px;
}

/* Centres text in call to action */
#cta {
    margin: 20px;
    text-align: center;
}

/* Setting styling in Call to Action */
#cta a {
    text-decoration: none;
    font-weight: bolder;
    font-size: x-large;
    color: inherit;
}

#cta p {
    font-family: 'Assistant', Arial, Helvetica, sans-serif;
    font-size: larger;
}

#bloglink {
    background: url(../images/pexels-polina-tankilevitch-4110404.webp) no-repeat center/cover;
    height: 300px;
    display: flex;
    align-items: flex-end;
    font-size: xx-large;
    justify-content: center;
}

/* Removes link styling */
.imglink {
    text-decoration: none;
    color: inherit;
}

/* Media query for tablets and larger (768px and above) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    /* Makes content visible on larger screens, pushes it further down screen*/
    main {
        margin-top: 68.5px;
    }

    /* Makes use of extra screen space in footer */
    footer {
        display: flex;
        padding: 20px;
        flex-direction: row;
        align-items: baseline;
    }

    /* Display content in a row rather than column */
    .flexcontent {
        display: flex;
        flex-direction: row-reverse;
        align-items: center;
        justify-content: space-between;
    }

    .ctabox {
        align-content: center;
        justify-content: space-around;
        max-width: 463px;
    }

    .contactinfobox {
        flex-direction: row;
    }

    #bloglink {
        width: 463px;
        height: 15em;
        background-position: top;
    }

    /* Setting font size of text in Call to Action element of homepagec*/
    #cta a {
        font-size: xx-large;
    }

    #cta p {
        font-size: xx-large;
    }

    /* Loads higher resolution image on larger screens */
    #heroimage {
        height: 600px;
        width: 100%;
        background: url('../images/johny-goerend-pnigODapPek-unsplash.webp') no-repeat top/cover;
        position: relative;
        margin: 0;
        margin-bottom: 0;
    }

    /* Increasing text size on hero image and resizing green box*/
    #herotext {
        font-size: 2rem;
        height: 200px;
        width: fit-content;
    }

    /* Removing hamburger menu on larger screens */
    #navigation {
        display: flex;
    }

    .nav-toggle-label {
        display: none;
    }
}

/* Media query for laptop screens and larger */
@media screen and (min-width: 992px) {

    /* Prevents larger header from covering main content */
    main {
        margin-top: 114px;
    }

    /* Displays footer content in a row on larger screens */
    footer {
        display: flex;
        padding: 20px;
        flex-direction: row;
        align-items: center;
        font-size: 125%;
        color: rgba(71, 108, 70, 1);
        background-color: #FFFFFF;
    }

    .fa-brands {
        color: rgba(71, 108, 70, 1);
        font-size: 125%;
    }

    /* Moves nav links underneath header */
    #page-header {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    /* Creates tiled display on larger screens */
    .laptopdisplay {
        display: flex;
        flex-direction: row;
    }

    .flexcontent {
        flex-direction: column;
    }

    /* Changes colour of Call to Action box to improve contrast against header */
    .ctabox {
        color: antiquewhite;
        background-color: rgba(71, 108, 70, 1);
        height: 300px;
    }

    /* Loads higher resolution image and puts contact form to left of page */
    .contactformimage {
        background: url(../images/max-tutak-unsplash.webp) no-repeat right/cover;
        justify-content: flex-start;
        height: 625px;
        flex-direction: row;
    }

    /* Sets appropriate form width for laptop screens */
    .contactformbox {
        height: 55vh;
        width: 30vw;
    }

    .contactinfobox {
        height: 55vh;
        width: 40vw;
    }

    /* Prevents form inputs from overlapping outside of .contactformbox */
    .form {
        width: 25vw;
    }

    .signupimage {
        background: url(../images/compressed-pexels-jep-gambardella.webp) no-repeat center/cover;
        justify-content: flex-start;
        height: 625px;
    }

    .signupbox {
        width: 30vw;
    }

    .submitbutton:hover {
        background-color: antiquewhite;
        color: rgba(71, 108, 70, 1);
    }

    #logo {
        font-size: 125%;
    }

    /* Displays content of Call to Action box in the centre */
    #cta {
        display: flex;
        flex-direction: column;
        transform: translateY(50px);
    }

    /* Resizes image to reduce wasted screen space */
    #bloglink {
        height: 347px;
        background-position: center;
    }

    /* Resizes hero image to take up extra space */
    #heroimage {
        height: 647px;
    }

    /* Adds responsiveness, shows user which link is being hovered over */
    #navigation li:hover {
        font-weight: bold;
    }
}

